# AOSP_Indexer

./: README.md
clion/: CMakeLists.txt  aosp.ipr
